  * Fix saving file priorities when switching torrents in the addtorrentdialog
  * Fix the allocate mode not being preserved when selecting different torrents in addtorrentdialog
  * Fix #655 issue where default torrent options wouldn't be set for new torrents added to the addtorrentdialog
  * Fix #817 email notifications fail to substitute format strings

=== Deluge 1.1.3 - (15 February 2009) ===
==== Core ====
  * Fix issue where checking queue would stop
  * Fix announcing to SSL trackers

==== Misc ====
  * Fix issue when initializing gettext that would prevent deluge from starting
  * Fix logging exceptions when starting the daemon
  * Fix displaying errors when a torrent is Checking
  * Fix #790 tracker hosts not correct for some 3rd-level domain names

=== Deluge 1.1.2 - (31 January 2009) ===
==== Core ====
  * Fix issue where torrents get stuck Checking

==== GtkUI ====
  * Fix #761 use proper theme colours in sidebar
  * Fix saving files/peers tab state when no column is sorted

=== Deluge 1.1.1 - (24 January 2009) ===
==== Core ====
  * Fix oldstateupgrader for those upgrading from 0.5.x
  * Fix setting Peer TOS byte
  * Fix setting outgoing ports

==== GtkUI ====
  * Fix opening links from Help menu and others
  * Fix remembering sorted column in the torrent list
  * Fix saving Files tab and Peers tab state
  * Disable popup notification in preferences on Windows
  * Fix crashing in Add Torrent Dialog when removing torrents from the list
  * Do not allow duplicate torrents in the Add Torrent Dialog
  * Fix translating speed units in status tab when a per-torrent limit is set
  * Fix torrents not displaying properly after disconnecting and reconnecting to the daemon
  * Fix when sorting # column, downloads should be on top

==== Misc ====
  * Fix bdecoding some torrent files
  * Fix the -l, --logfile option
  * Fix #729 tracker icons not being saved in the correct location
  * Add support for more tracker icons